--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.Chapter3"
         tools:targetApi="31">
         <activity
+            android:name=".HitungNilaiMahasiswa"
+            android:exported="false" />
+        <activity
+            android:name=".KalkulatorBMI"
+            android:exported="false" />
+        <activity
             android:name=".HomeActivity"
             android:exported="false" />
         <activity
